fixed alignments of icons

--- a/src/app/pages/manage-account/manage-expense/manage-expense.component.css
+++ b/src/app/pages/manage-account/manage-expense/manage-expense.component.css
@@ -17,8 +17,15 @@ body {
 .mat-icon {
   font-size: var(--font-x-large);
   text-align: center;
-  margin: 0;
+  margin: 10px;
 }
+
+.icon {
+  font-size: var(--font-x-large);
+  text-align: center;
+  margin: 0px;
+}
+
 
 
 
